Address some minor TODOs